--- a/contracts/package.json
+++ b/contracts/package.json
@@ -11,6 +11,7 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "mocha": "^3.2.0",
+    "mocha-logger": "^1.0.5",
     "solc": "^0.4.8",
     "web3": "^0.18.2"
   },
